--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -2,7 +2,7 @@
 %\pdfminorversion=5 
 \RequirePackage[2020-02-02]{latexrelease}
 \pdfsuppresswarningpagegroup=1
-\documentclass[12pt,a4paper,twoside]{book}
+\documentclass[12pt,a4paper,oneside]{book}
 
 %Packages
 \usepackage[utf8]{inputenc}
@@ -17,7 +17,7 @@
 \usepackage{xfrac}
 \usepackage{graphicx}
 \usepackage{xcolor}
-\usepackage[textwidth=160mm,bottom=25mm,top=25mm,headsep=5mm,bindingoffset=8mm]{geometry}
+\usepackage[textwidth=155mm,bottom=25mm,top=25mm,headsep=8mm,bindingoffset=8mm]{geometry}
 \usepackage{listings}
 \usepackage{fancybox}
 \usepackage[small,bf]{caption} %Schönere Beschriftungen für Abbildungen und Tabellen
@@ -292,19 +292,20 @@
 \begin{acronym}[XXXXX]
 	\acro{CDI}{Coherent Diffractive Imaging}
 	\acro{IDI}{Incoherent Diffractive Imaging}
-	\acro{FEL}{Free Electron Laser}
+	\acro{FEL}{Free-electron Laser}
 	\acro{HBT}{Hanbury-Brown Twiss}
 	\acro{NP}{Nano particle}
 	\acro{PS}{Polystyrene}
 	\acro{MMA}{Methylmethacrylate}
 	\acro{EHMA}{Etyhlhexymethacrylate}
 	\acro{GaAs}{Galliumarsenide}
-	\acro{AAO}{Anodic Alumina Oxide}
-	\acro{SNR}{Signal to Noise Ratio}
-	\acro{PSF}{Point Spread Function}
+	\acro{AAO}{Anodic alumina oxide}
+	\acro{SNR}{Signal to noise ratio}
+	\acro{PSF}{Point spread function}
+	\acro{SNR}{Signal to noise ratio}
 	\acro{FWHM}{Full width at half maximum}
-	\acro{TEM} {Transmission Electron Microscopy}
-	\acro{SAXS}{Small Angle X-ray Scattering}
+	\acro{TEM} {Transmission electron microscopy}
+	\acro{SAXS}{Small angle X-ray scattering}
 \end{acronym}
 
 \endgroup
