--- a/Tex/introduction.tex
+++ b/Tex/introduction.tex
@@ -1,14 +1,14 @@
 \chapter{Introduction}
-Throughout the history of science, advances in the abilities to image structures at ever-decreasing length scales enabled break-through discoveries, and led to a better understanding of our world:
+Throughout the history of science, advances in the abilities to image structures at ever-decreasing length scales enabled break-through discoveries and led to a better understanding of our world:
 The optical microscope gave humankind a window into the world of microorganisms, X-ray crystallography and later electron microscopy allowed scientists to decipher the building blocks of life and laid the foundation for modern semiconductor physics and pushed materials science forward, in turn leading to new advancements in imaging \cite{hooke1665,laue1915,ruska1939,watson1953,hovmoeller1984}.
 
 In X-ray imaging, the usage of synchrotron radiation and finally the advent of free-electron lasers (FELs) providing ultra-short and brilliant X-ray pulses pushed the boundaries far beyond what could have been imagined by Röntgen \cite{cloetens1996,emma2010}. One imaging method making use of these capabilities is Coherent Diffractive Imaging (CDI), in which the spatially and temporally coherent incoming light is scattered in a sample by a fixed phase, conserving its coherence properties and producing an interference pattern which upon measurement can give spatial information with high temporal and spatial resolution \cite{seibert2011,bostedt2010,barke2015}. Incoherent scattering processes, such as fluorescence, are considered background noise worth suppression or filtering in CDI \cite{schultz2013chapter7}. 
 
-Recently, Classen et al. suggested instead to \textit{use} the fluorescence for imaging in a new method they termed \textit{Incoherent Diffractive Imaging} (IDI) based on the concept of intensity-intensity correlations pioneered by Hanbury-Brown and Twiss in stellar interferometry \cite{classen2017,hanbury1956}.  Hanbury-Brown and Twiss's (HBT) experiments famously contradicted the statement by Dirac, that \textit{"[...] each photon then interferes only with itself. Interference between two different photons never occurs.}” \cite{dirac1958} and are considered as one of the most influential experiments leading to a new understanding of quantum optics and a quantum theory of coherence by Glauber, Mandel et al. \cite{glauber1963,mandel1959, hong1987,glauber2006}: While in a semi-classical picture of the observed correlations can be explained by an averaging out of the instantaneous random phases in the correlation function, the quantum mechanical interpretation has to consider multi-photon states with indistinguishable paths. Accordingly, the premise of IDI is, as long as the fluorescence can be recorded in a time interval of similar length as its coherence time, the phase fluctuation within a single measurement can be considered as almost stationary. Averaging over enough pairs of intensities in the far-field suppresses the random contribution to the phases but preserves phase difference due to the spatial distribution of the emitters,   allowing the recovery of the sought for spatial information about the sample.
+Recently, Classen et al. suggested instead to \textit{use} the fluorescence for imaging in a new method they termed \textit{Incoherent Diffractive Imaging} (IDI) based on the concept of intensity-intensity correlations pioneered by Hanbury-Brown and Twiss in stellar interferometry \cite{classen2017,hanbury1956}.  Hanbury-Brown and Twiss's (HBT) experiments famously contradicted the statement by Dirac, that \textit{"[...] each photon then interferes only with itself. Interference between two different photons never occurs.}” \cite{dirac1958} and are considered as one of the most influential experiments leading to a new understanding of quantum optics and a quantum theory of coherence by Glauber, Mandel et al. \cite{glauber1963,mandel1959, hong1987,glauber2006}: While in a semi-classical picture of the observed correlations can be explained by an averaging out of the instantaneous random phases in the correlation function, the quantum mechanical interpretation has to consider multi-photon states with indistinguishable paths. Accordingly, the premise of IDI is, as long as the fluorescence can be recorded in a time interval of similar length as its coherence time, the phase fluctuation within a single measurement can be considered as almost stationary. Averaging over enough pairs of intensities in the far-field suppresses the random contribution to the phases but preserves phase difference due to the spatial distribution of the emitters, allowing the recovery of the sought-for spatial information about the sample.
 
-For many elements, the cross-section of fluorescence exceeds that of coherent scattering by orders of magnitude, and the strong anisotropy of coherent scattering leads to the need for high dynamic range detectors in CDI \cite{xraylib,attwood1999}.  Fluorescence, on the other hand, can be recorded in all directions, allowing the use of more detectors and even the integration in existing CDI setups as a second simultaneous imaging method. While wide-angle CDI in a single orientation only gives limit access to three-dimensional information  (only on a two dimensional surface inside the reciprocal space), IDI in the same geometry measures a continuous volume inside the reciprocal space, in theory allowing higher resolution three-dimensional imaging from few orientations \cite{barke2015,classen2017}. Furthermore, as the emitted fluorescence energies are highly element dependent, the method has an inherent element specificity. Taken together, IDI promises to enhance the imaging capabilities using FELs  greatly.
+For many elements, the cross-section of fluorescence exceeds that of coherent scattering by orders of magnitude, and the strong anisotropy of coherent scattering leads to the need for high dynamic range detectors in CDI \cite{xraylib,attwood1999}.  Fluorescence, on the other hand, can be recorded in all directions, allowing the use of more detectors and even the integration in existing CDI setups as a second simultaneous imaging method. While wide-angle CDI in a single orientation only gives limited access to three-dimensional information  (only on a two dimensional surface inside the reciprocal space), IDI in the same geometry measures a continuous volume inside the reciprocal space, in theory allowing higher resolution three-dimensional imaging from few orientations \cite{barke2015,classen2017}. Furthermore, as the emitted fluorescence energies are highly element dependent, the method has an inherent element specificity. Taken together, IDI promises to enhance the imaging capabilities using FELs  greatly.
 
-An already established, related technique, X-ray photon correlation spectroscopy (XPCS), uses intensity fluctuations in coherent X-ray speckle patterns introduced by temporally varying phase shifts to gain insights about dynamics on the timescales of milliseconds or longer using synchrotron radiation or shorter than picoseconds using FELs \cite{lehmkuhler2021,grubel2007}. Furthermore, intensity correlation measurements have been used at synchrotrons and FELs to measure the coherence properties of the beam and for scattering experiments in which the incoherence was created by a separate diffusor \cite{yabashi2002,singer2013,inoue2019,gorobtsov2018,schneider2018}.  Nevertheless, thus far, the only successful experiment applying intensity correlations of inner shell fluorescence to imaging used a metal foil as the sample to measure merely the size of the excitation beam's focal spot \cite{nakumura2020}. No proof-of-principle experiment proving the potential for high resolution imaging has yet been published. 
+An already established, related technique, X-ray photon correlation spectroscopy (XPCS), uses intensity fluctuations in coherent X-ray speckle patterns introduced by temporally varying phase shifts to gain insights about dynamics on the timescales of milliseconds or longer using synchrotron radiation or shorter than picoseconds using FELs \cite{lehmkuhler2021,grubel2007}. Furthermore, intensity correlation measurements have been used at synchrotrons and FELs to measure the coherence properties of the beam and for scattering experiments in which the incoherence was created by a separate diffusor \cite{yabashi2002,singer2013,inoue2019,gorobtsov2018,schneider2018}.  Nevertheless, thus far, the only successful experiment applying intensity correlations of inner shell fluorescence to imaging used a metal foil as the sample to measure merely the size of the excitation beam's focal spot \cite{nakumura2020}. No proof-of-principle experiment proving the potential for high-resolution imaging has yet been published. 
 
 In this thesis, first, some basic concepts of coherence (\fref{chap:theory}) will be recapitulated, leading to a classical interpretation of the HBT effect and a semi-classical study of the signal-to-noise characteristics of IDI. In \fref{chap:simulation} a method to simulate IDI to validate the theoretical considerations and to optimize relevant parameters for an experimental implementation will be presented. The sample preparation, the setup, the necessary processing of the recorded data and, finally, the results of an experiment performed at the SACLA FEL facility in which we have tried to move IDI from imaging the focal volume to imaging nanoparticles and crystal samples will be shown in \fref{chap:experiment}.
 
