dont divide result by 4

--- a/Tex/discussion.tex
+++ b/Tex/discussion.tex
@@ -1,6 +1,6 @@
 \section{Discussion}
 
-The estimated number of independent modes from the foil spectra is lower than expected. However, one must keep in mind that the used regression scheme has a low sensitivity for higher $M$ values due to the diminishing gradient and might underestimate the number of modes. Nevertheless, this indicates that the number of modes is much higher than the "optimal" value for unpolarized light ($M=2$), resulting in severely reduced contrast. The amplitude of the intensity correlations observed in the foil samples is a factor of 2-4 less than previously measured by Inoue et al. and suggests more than 200 modes. This might be the combination of a longer pulse length due to less strict filtering of the shots (a different trade-off chosen with regards to peak contrast vs. noise reduction by averaging over more images) and the only partially by the regression corrected undersampling creating additional spatial modes. 
+The estimated number of independent modes from the foil spectra is lower than expected. However, one must keep in mind that the used regression scheme has a low sensitivity for higher $M$ values due to the diminishing gradient and might underestimate the number of modes. Nevertheless, this indicates that the number of modes is much higher than the "optimal" value for unpolarized light ($M=2$), resulting in severely reduced contrast. The amplitude of the intensity correlations observed in the foil samples matches approximately the result of the simulation presented in \fref{chap:simulation}  (\fref{fig:simfoil}) after accounting for polarization and multiple emission lines but is a factor of 2-4 less than previously measured by Inoue et al. and suggests more than 200 modes. This might be the combination of a longer pulse length due to less strict filtering of the shots (a different trade-off chosen with regards to peak contrast vs. noise reduction by averaging over more images), the only partially by the regression corrected undersampling creating additional spatial modes and the higher observation angle.
 
 The nanoparticle samples have much less prominent features according to the SAXS measurements than initially planned and compared to the structure factor for non-interacting spheres, leading to an overestimation of the SNR in the simulations. The SAXS measurements give a reasonably good insight into the expected results of the IDI measurement of the same sample, but the latter will differ due to the iron specificity of the reconstructed structure factor and the smaller focal volume capturing less aggregates. Optimization of the preparation method leading to either higher concentrations of non-aggregating particles or to complete aggregation and the formation of super-crystals might lead to stronger features. Also, liquid injectors might be an option, even though, partially due to the tight focus, short Rayleigh length, and therefore difficult to achieve spatial overlap of the beam and sample, which would introduce additional complexity to the experimental setup.
 
