--- a/Tex/conclusion.tex
+++ b/Tex/conclusion.tex
@@ -1,5 +1,5 @@
 \chapter{Conclusion and Outlook}
-There is still an ongoing discussion about the feasibility, optimal sample and beam requirements of a proof-of-principle experiment of IDI at the nanoscale as well as about in which areas IDI can provide new information. More thorough theoretical studies, further improvements in experimental design and data analysis will be beneficial.
+The promise of IDI to allow three-dimensional, high resolution, element-specific imaging of nanoscale samples could not yet be fulfilled by the experimental implementation. There is still an ongoing discussion about the feasibility, optimal sample and beam requirements of a proof-of-principle experiment of IDI at the nanoscale as well as about in which areas IDI can provide new information. More thorough theoretical studies, further improvements in experimental design and data analysis will be beneficial.
 
 \paragraph{Developed tools for CDI/IDI experiments}
 Both the GPU-accelerated simulation code and the reconstruction code developed for this thesis are open source\footnote{available under \url{https;//github.com/fzimmermann89/idi}} and will be used for planning and analyzing future IDI experiments. The simulation code allows to compare IDI and CDI experiments for the same sample, comparison for different samples and experimental parameters as shown in \fref{chap:simulation}.
@@ -7,9 +7,9 @@ The analysis code implements 2d, 3d and radial correlations for small and wide a
 Furthermore, the Kossel line alignment tool with its graphical user interface allows easy analysis of the detector orientation for future experiments with strict alignment margins.
 
 \paragraph{Experimental Improvements}
-As previously published results for the foil samples could be reproduced but, as the experiments using nanoparticle and crystal samples have been inconclusive so far, the proof of high resolution imaging using IDI is still outstanding, further refinements in the experimental design are necessary.
+As previously published results for the foil samples could be reproduced but, as the experiments using nanoparticle and crystal samples have been inconclusive so far, the proof of high resolution imaging using IDI is still outstanding and further refinements in the experimental design are necessary.
 
-Recently, we performed an experiment using sub-1\,fs pulses at the CXI beamline at the LCLS free electron laser. In this experiment, three major improvements over the SACLA experiment were implemented: First, the shorter pulse length reduces the number of temporal modes and a shot-by-shot high resolution spectrometer allows for better filtering of the X-ray pulses by estimated pulse length and intensity. Second, the data was recorded in forward direction, solving the undersampling issue and reducing the spatial modes. And third, two new, signal optimized samples were chosen: Anodic aluminum oxide (AAO) membranes with regular spaced 20\,nm or 30\,nm wide pores, with are filled with Nickel or Vanadium using atomic layer deposition, creating an array of hexagonal placed 500\,nm long cylinders 60\,nm/100\,nm apart \cite{carina2019}. As the range of the order of the self-organizing pores is smaller than the total area used in the experiment, the simulated reconstruction shows rings (\fref{fig:outlook_aao}). 
+Recently, we performed an experiment using sub-1\,fs pulses at the CXI beamline at the LCLS free electron laser. In this experiment, three major improvements over the SACLA experiment were implemented: First, the shorter pulse length reduces the number of temporal modes and a shot-by-shot high resolution spectrometer allows for better filtering of the X-ray pulses by estimated pulse length and intensity. Second, the data was recorded in forward direction, solving the undersampling issue and reducing the spatio-temporal modes in the small angle regime. And third, two new, signal optimized samples were chosen: Anodic aluminum oxide (AAO) membranes with regular spaced 20\,nm or 30\,nm wide pores, with are filled with Nickel or Vanadium using atomic layer deposition, creating an array of hexagonal placed 500\,nm long cylinders 60\,nm/100\,nm apart \cite{carina2019}. As the range of the order of the self-organizing pores is smaller than the total area used in the experiment, the simulated reconstruction shows rings (\fref{fig:outlook_aao}). 
 The other sample are lithographically produced nanogratings with two diffferent pitches, 60\,nm  and 80\,nm \cite{mojarad2015}. For these samples, a simulation is shown in \fref{fig:outlook_grating}. Both samples combine the advantages of a single crystal sample (namely intense features) while providing more signal and requiring less accessible reciprocal space. 
 Based on the simulations, it can be estimated, that a few hundred images taken with sub-fs pulses exciting 20\% of the atoms would suffice to reach a SNR of >3.
 We were able to record full datasets on multiple samples. The data analysis of this experiment has not yet been completed and might result in the first experimental proof of using fluorescence intensity correlation for structural imaging at the nanoscale.  
@@ -46,5 +46,5 @@ Extending on the results obtained for both determining the focal volume as well 
 \paragraph{Higher Order Correlations}
 Extending the Hanbury-Brown and Twiss experiment to higher order correlations allows the usage of prior knowledge about the distribution of the spatial frequencies in the sample as an effective filter by fixing some terms in the correlation function at certain positions termed \textit{Magic Poisition} \cite{schneider2018,thiel2007}. A future application of this scheme in the analysis of the already recorded fluorescence patterns might lead to a significant increase in the SNR.
 $$\\$$
-$$\\$$
-Overall, the methods presented will help pushing the experimental implementation of IDI forward. Before considering the method as non-suitable for high resolution imaging, the results of experiments implementing the improvements described above should be awaited.
+
+Overall, the methods presented could help pushing the experimental implementation of IDI forward. Before considering the method as non-suitable for high resolution imaging, the results of experiments implementing the improvements described above should be awaited.
