--- a/Tex/theory.tex
+++ b/Tex/theory.tex
@@ -172,7 +172,7 @@ For classical fields, this is equivalent  to normalized correlations of intensit
 \end{equation}
 
 
-\paragraph{Van Cittert Zernicke}
+\paragraph{Van Cittert–Zernike}
 The Van Cittert–Zernike theorem establishes that in the far field, the coherence function of a 
 quasi-monochromatic but spatially incoherent light source is proportional to the 2D Fourier transform intensity distribution of the source. Carter and Wolf introduced a generalization for three dimensional sources (without the need for a small angle approximation), showing that in the case of an completely incoherent source field, the first order coherence in the far field is proportional to the 3D Fourier transform of the source's intensity distribution \cite{rosen1996, goodman2005, carter1981}:
 \begin{equation}
@@ -216,10 +216,10 @@ For a large enough distance between the sources and detectors $(L \gg R)$, the s
 \begin{equation}
 	g^2\left(\vec{k_1}-\vec{k_2}\right)-1\propto \cos{\left(\vec{R} \cdot\left(\vec{k}_{2}-\vec{k}_{1}\right)\right)}
 \end{equation} 
-where $\vec{k}_{1,2}=k \vec{r}_{1,2}$ is the wavevector of the light seen in detector $1$/detector $2$. As the modulation frequency of the the intensity correlation is depended $R$, the separation of the two sources (i.e the size of the star) can be recovered.
-
+where $\vec{k}_{1,2}=k \vec{r}_{1,2}$ is the wave vector of the light seen in detector $1$/detector $2$. As the modulation frequency of the the intensity correlation is depended $R$, the separation of the two sources (i.e the size of the star) can be recovered.
+\clearpage
 \section{Incoherent Diffractive Imaging}
-Based on the HBT experiment, a simplified explanation of Incoherent Diffractive Imaging (IDI) can easily be made for thermal light sources in a classical view  by application of the Siegert relation.
+Based on the HBT experiment, a simplified explanation of Incoherent Diffractive Imaging can easily be made for thermal light sources in a classical view by application of the Siegert relation.
 
 \paragraph{Siegert Relation}
 For chaotic light with Gaussian statistics, Isserlis' theorem 
@@ -229,7 +229,7 @@ $\left<ABCD\right>=\left<AB\right>\left<CD\right>+\left<AC\right>\left<BD\right>
 \end{equation}
 which is known as the Siegert Relation \cite{ou2017}. 
 
-As, as according to the van Cittert Zernicke theorem (\fref{eq:vcz}), $g^1$ encodes structural information, 
+As, as according to the van Cittert–Zernike theorem (\fref{eq:vcz}), $g^1$ encodes structural information, 
 \begin{equation}
 	g^1(\vec{k_1},\vec{k_2}) \propto \mathscr{F}S(\vec{r}) = S(\vec{q})
 \end{equation}
