--- a/Tex/discussion.tex
+++ b/Tex/discussion.tex
@@ -1,11 +1,12 @@
 \section{Discussion}
 
-The estimated number of independent modes from the foil spectra is lower than expected. However, one must keep in mind that the used regression scheme has a low sensitivity for higher $M$ values due to the diminishing gradient and might underestimate the number of modes. Nevertheless, this indicates that the number of modes is much higher than the "optimal" value for unpolarized light ($M=2$), resulting in severely reduced contrast. The amplitude of the intensity correlations observed in the foil samples matches approximately the result of the simulation presented in \fref{chap:simulation}  (\fref{fig:simfoil}) after accounting for polarization and multiple emission lines but is a factor of 2-4 less than previously measured by Inoue et al. and suggests more than 200 modes. This might be the combination of a longer pulse length due to less strict filtering of the shots (a different trade-off chosen with regards to peak contrast vs. noise reduction by averaging over more images), the only partially by the regression corrected undersampling creating additional spatial modes and the higher observation angle.
+The estimated number of independent modes from the foil spectra is lower than expected. However, one must keep in mind that the used regression scheme has a low sensitivity for higher $M$ values due to the diminishing gradient and might underestimate the number of modes. Nevertheless, this indicates that the number of modes is much higher than the "optimal" value for unpolarized light ($M=2$), resulting in severely reduced contrast. The amplitude of the intensity correlations observed in the foil samples matches approximately the result of the simulation presented in \fref{chap:simulation}  (\fref{fig:simfoil}) after accounting for polarization and multiple emission lines but is a factor of 2-4 less than previously measured by Inoue et al. and suggests more than 200 modes. This might be the combination of a longer pulse length due to less strict filtering of the shots (a different trade-off chosen with regards to peak contrast vs. noise reduction by averaging over more images), the only partially by the regression corrected undersampling creating additional spatial modes and the higher observation angle. For an accurate, numerical measurement of the focal width in horizontal and vertical direction, the experiment would have had to be conducted in a small angle regime with the foil placed perpendicular to the beam and the detector placed close to forward direction.
 
-The nanoparticle samples have much less prominent features according to the SAXS measurements than initially planned and compared to the structure factor for non-interacting spheres, leading to an overestimation of the SNR in the simulations. The SAXS measurements give a reasonably good insight into the expected results of the IDI measurement of the same sample, but the latter will differ due to the iron specificity of the reconstructed structure factor and the smaller focal volume capturing less aggregates. Optimization of the preparation method leading to either higher concentrations of non-aggregating particles or to complete aggregation and the formation of super-crystals might lead to stronger features. Also, liquid injectors might be an option, even though, partially due to the tight focus, short Rayleigh length, and therefore difficult to achieve spatial overlap of the beam and sample, which would introduce additional complexity to the experimental setup.
+The nanoparticle samples have much less prominent features according to the SAXS measurements than initially planned and compared to the structure factor for non-interacting spheres, leading to an overestimation of the SNR in the simulations. The SAXS measurements give a reasonably good insight into the expected results of the IDI measurement of the same sample, but the latter will differ due to the iron specificity of the reconstructed structure factor and the smaller focal volume capturing less aggregates. As the measurement was, due to limitations in the experimental setup, performed with the excitation beam under an 45° angle, the path length differences due to the relatively high thickness of the samples will have created many spatiotemporal modes reducing the contrast. At the time of sample simulations, design and preparation, this experimental limitation was not yet known and therefore not considered.
+Optimization of the preparation method leading to either higher concentrations of non-aggregating particles or to complete aggregation and the formation of super-crystals might lead to stronger features. Also, liquid injectors might be an option, even though, partially due to the tight focus, short Rayleigh length, and therefore difficult to achieve spatial overlap of the beam and sample, which would introduce additional complexity to the experimental setup. If a follow-up measurement were to be performed, it should be designed to be in forwards direction under the small angle regime to reduce the detrimental effect of the sample thickness.
 
 The achieved alignment of the crystalline samples after determination of the mean orientation, and translational offset is still worse than the resolution of the reconstruction and the size of the expected Bragg peaks, resulting most likely in a reduction of the signal contrast through averaging of different pixel pairs not belonging to the same true $\vec{q}$. As the regression has only been performed on the average image variations over the scanning of the sample are not corrected. Mounting of the sample on the window might as well as the damage done during the measurement by the focused beam might have resulted in stress, slight bending of the thin glass stabilizing the crystal sheet, and stress in the lattice. Additionally, thermal motion of the gallium will have reduced the contrast. The energy of the excitation X-ray being close to the gallium K$_\alpha$ energy (to avoid excitation of the aresenic) makes it impossible to quantify or filter coherent scattering in the recorded data. Combined, these effects might have resulted in a reduction of the the peak intensity below the noise level. Furthermore, it has proved to be difficult to ensure that the orientation correction works as designed and the Bragg peaks would be reconstructed at the positions chosen as regions-of-interest. A non-comprehensive search using local maxima filter (as used to determine the Bragg peak positions in the simulated correlations for \fref{fig:accesiblebraggq}) has not lead to reasonable, i.e. symmetric and at the correct $\left|\vec{q}\right|$, candidates at other positions.
 
-Severe detector artifacts reduced the amount of usable data significantly, which, unfortunately, has not been noticed during the experiment -- showing the necessity of better continuous online monitoring of the recorded data. The photon-counting applied to the raw images improves the fidelity of the focal images. Depending on the PSF of the detectors and sufficiently low photon counts, more sophisticated droplet schemes based on error minimization allowing for subpixel resolution, incorporating the scattering photons into the droplet algorithm or using a neural network trained on synthetic images could further reduce the influence of noise and undersampling and might increase the contrast in for the single crystal images \cite{baumann2018,collaboration2014,schayck2020,sun2020}.\\
+Severe detector artifacts unnoticed during the experiment reduced the amount of usable data significantly -- showing the necessity of better continuous online monitoring of the recorded data. The photon-counting applied to the raw images improves the fidelity of the focal images. Depending on the PSF of the detectors and sufficiently low photon counts, more sophisticated droplet schemes based on error minimization allowing for subpixel resolution, incorporating the scattering photons into the droplet algorithm or using a neural network trained on synthetic images could further reduce the influence of noise and undersampling and might increase the contrast in for the single crystal images \cite{baumann2018,collaboration2014,schayck2020,sun2020}.\\
 Even though the application of non-uniform FFT (NUFFT) based correlation estimators with sophisticated interpolation kernels, which have successfully been used in other fields, would require more memory, the reduction in under-sampling by making full use of the smaller $\vec{q}$ spacing at higher detector angles could make it a worthwhile extension of the used 3d reconstruction \cite{laguna1998,yang2008,chang2020}. Another possible avenue for improvement of the implementation might be to reconstruct only relevant parts of the reciprocal space, significantly reducing computational time and memory requirements. 
 
